# python-logging-server

./: .gitignore  README.md  hello_world.py  logs.txt  main.py  pyproject.toml  server_logs.txt  test.py
.github/workflows/: pytest-app.yml
src/log_server/: __init__.py  log_server.py  remote_logging_app.py
tests/: conftest.py  test_logclient.py  test_logserver.py  test_logserver_integrated.py
