[project]
name = "python-logging-server"
description = "A lightweight server to collect logs from remote clients, allowing centralized log storage for distributed applications."

dynamic = ["version"]

readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = ["prometheus-client >= 0.20"]

[tool.setuptools.dynamic]
version = { attr = "log_server.__version__" }

[project.optional-dependencies]
test = ["pytest >= 7.1.1"]

# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"


[tool.pytest.ini_options]
addopts = "--maxfail=1 -s"
console_output_style = "count"
# log_cli = true
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
